  Added a "eventInsertionPoint" to control where events are inserted
  When doing persistence work for frontChests and things, I discovered that I have no idea how the restore system works so perfectly. It just does... (Just pointing this out)
  Fixed preciseTotals not actually counting things properly
  Now prompts for preciseTotals if rednet and turtle.inspect
  New Parameters:
    -testParams [force]: Lists all the parameters you've selected and ends the program
    -lava/lavaBucket/lavaRefuel [slot]: Turtle will check itself and refuel with lava if possible.
    -compareChest [slot]: This is the chest slot for oldOreQuarry
    -frontChest [t/f]: If true, turtle will also check in front of itself for chests when mining. (May only work on odd rows...)
    -lavaBuffer [number]: The buffer of fuel before checks for lava again

--Version 3.6.3
  Turtle will attempt to drop "junk" items in oreQuarry before moving to drop stuff off. If two or less stacks changed, will still do full drop
  SmartFuel displays the current fuel multiplier
  Number parameters no longer silently convert negatives to positive, they just won't accept them
  Implemented "float" type of parameter that just doesn't math.floor the number
  String arguments now accept "/" (they can actually do file names in directories
  Removed sleep(1) from autostartup file because it was annoying
  Made bedrock function try to get out of bedrock intelligently. Hopefully won't get stuck
  Raised maxTries to 200
  Fixed bug where refueling had unexpected behavior near maxFuelLimit
  Added more options if neededFuel is over fuel limit
  Fixed -flatBedrock not working with -oreQuarry
  Added support for parameter aliases so I don't have to type as much adding aliases
  newSpecialSlot now intelligently errors if you try to have two slots the same
  New Parameters:
    -overfuel/fuelMultiplier [number]: This number is is what neededFuel is multiplied by when fuel is low.